<resources>
    <string name="app_name">MyPets</string>

    <!--LoginActivity-->
    <string name="hint_text_username">Username</string>
    <string name="hint_text_password">Password</string>
    <string name="btn_text_login">Sing In</string>
    <string name="btn_text_register">Sing Up</string>

    <!--RegisterUserActivity-->
    <string name="activity_label">New User</string>
    <string name="username_label">E-mail</string>
    <string name="password_label">Password</string>
    <string name="password2_label">Repeat Password</string>
    <string name="btn_register_label">Register</string>

    <!-- ListPetsActivity -->
    <string name="title_actListPets">All pets</string>

    <!-- ListUsersActivity -->
    <string name="title_actListUsers">All Users</string>
</resources>
