<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/txtUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_text_username"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorText"/>

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_text_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorText"/>


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_login"
                android:onClick="btnLogin"
                android:text="@string/btn_text_login"
                android:textColor="@drawable/style_loginbtns_pressed"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_login"
                android:onClick="btnGotoRegisterUser"
                android:text="@string/btn_text_register"
                android:textColor="@drawable/style_loginbtns_pressed"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>